--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Template 3</title>
+		<title>Template</title>
+		<link rel="stylesheet" href="Css Folder/normalize.css" />
+		<link rel="stylesheet" href="Css Folder/index.css" />
+		<link rel="stylesheet" href="Css Folder/all.min.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;600;700;800&family=Open+Sans:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
-	<body></body>
+	<body>
+		<div class="header" id="header">
+			<div class="container">
+				<a href="#" class="logo">Template</a>
+				<ul class="main-nav">
+					<li><a href="article">Article</a></li>
+					<li><a href="gallery">Gallery</a></li>
+					<li><a href="features">Features</a></li>
+					<li><a href="#">Other Links</a></li>
+				</ul>
+			</div>
+		</div>
+	</body>
 </html>
